outputs/main/hsevo_bpp_online_2025-07-28_05-59-37/problem_iter11_response1.txt_stdout.txt
Traceback (most recent call last):
  File "/home/dokhanhnam1199/QD/problems/bpp_online/eval.py", line 9, in <module>
    from gpt import priority_v2 as priority
  File "/home/dokhanhnam1199/QD/problems/bpp_online/gpt.py", line 53
    enhancer = np.exp(hybrid_metric * item_reso_factor * (1.5 + 0.3 * frag_density * over)))
                                                                                           ^
SyntaxError: unmatched ')'
35
5
